# gymstallations-reports

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.json
.claude/commands/: deploy.md  setup.md
deploy/: Caddyfile  README.md  deploy.sh  gymstallations.service
frontend/: .env.example  .env.production  package-lock.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AccountMenu.jsx  CardActionsMenu.jsx  ConditionChart.jsx  ConfirmDialog.jsx  EquipmentIcon.jsx  Field.jsx  GradeBadge.jsx  HealthSummary.jsx
frontend/src/components/ui/: badge.jsx  button.jsx  card.jsx  input.jsx  progress.jsx  sonner.jsx
frontend/src/lib/: api.js  demo.js  equipment.js  image.js
frontend/src/views/: AdminUsersView.jsx  Dashboard.jsx  FormView.jsx  LoginView.jsx  ReportView.jsx
frontend/src/views/steps/: StepBasics.jsx  StepChecklist.jsx  StepEquipment.jsx  StepFinish.jsx  StepJobInfo.jsx  (+1 more)
server/: .env.example  .gitignore  README.md  pyproject.toml
server/app/: config.py  db.py  email_sender.py  form_handler.py  main.py  models.py  security.py  storage.py
server/app/routes/: auth.py  reports.py
server/app/templates/: report_email.html
server/scripts/: manage_users.py
src/: App.jsx
src/components/: ConditionChart.jsx  LifecycleBar.jsx
src/components/ui/: label.jsx  textarea.jsx
src/lib/: equipment.js
src/views/: Dashboard.jsx  FormView.jsx  LoginView.jsx  ReportView.jsx
src/views/steps/: StepAISummary.jsx  StepEquipmentType.jsx  StepReview.jsx  StepTechNotes.jsx
